# prac1_xarxes_2025

./: CHANGELOG  Informe Practiaca 1 xarxes Safont Catena, Gerard.docx  PKG-INFO  README.md  pyproject.toml
src/xarxes2025/: __main__.py  cli.py  client.py  clienthandler.py  server.py  state_machine.py  udpdatagram.py
xarxes2025/: __main__.py  cli.py  client.py  clienthandler.py  server.py  state_machine.py  udpdatagram.py
