[tool.poetry]
name = "xarxes2025"
version = "0.1.0"
description = "Video streaming application using RTSP/RTP protocols"
authors = ["Gerard Safont <gsc23@alumnes.udl.cat>"]
packages = [
    { include = "xarxes2025" }
]

[tool.poetry.dependencies]
python = ">=3.8.1"
click = "^8.1.3"
pillow = "^10.0.0"
loguru = "^0.7.0"
opencv-python = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xarxes2025 = "xarxes2025.cli:cli"